--- a/code/05-nyhtokaura/05-twitter_nyhtokaura.ipynb
+++ b/code/05-nyhtokaura/05-twitter_nyhtokaura.ipynb
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
     "ax_all_sw.set_yticklabels([\"40\",\"80\",\"120 posts in\\na FB Group\"])\n",
     "#ax_all_sw.legend_.remove()\n",
     "#ax_all_sw.tick_params(left=False, bottom=False)\n",
-    "plt.savefig(\"all_sidewalk.pdf\", transparent=True)\n"
+    "plt.savefig(\"nyhtis_fb.pdf\", transparent=True)\n"
    ]
   },
   {
